[package]
name = "rusty-chip8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
log = "*"
clap = { version = "3.0.14", features = ["derive"] }
chip8 = { path = "./chip8" }
rustbox = "*"

[workspace]
members = [ "chip8", "dbg" ]
